Sviluppo procedura GeneraFileTxtAlloggiatiWeb.

--- a/Codice/Form/Hotel/SchedinaPS.resx
+++ b/Codice/Form/Hotel/SchedinaPS.resx
@@ -125,38 +125,38 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABE
-        CAAAAk1TRnQBSQFMAgEBAgEAAewBAgHsAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBGwEcAf8BqgEMAQ0B/wGkAQkBCgH/AZ8BBgEHAf8BmgIE
-        Af8BlAIBAf8BjwIAAf8BiQIAAf8BgwIAAf8BLwIAAf8BLwIAAf8BKQIAAf8BJQIAAf/IAAHPASIBIwH/
-        AfMBjgGPAf8B5gGAAYEB/wGqAgAB/wMAAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8Af8BzgHIAcQB/wEN
-        AQQBAAH/AZ4CAAH/AZwCAAH/AZgCAAH/ASkCAAH/JAADNgFZAkcBRgGBAxABFZgAAdEBJgEnAv8BmQGa
-        Af8B7AGGAYcB/wHmAYABgQH/ASgBEgECAf8DAAH/AY0BLwEfAf8B7QHgAdgB/wHxAecB4AH/AY8BNgEq
-        Af8BowIAAf8BogIAAf8BnAIAAf8BLwIAAf8kAAMsAUMDTQH6AmoBRwH5Ay8BSpQAAdQBLAEtAv8BnwGg
-        Af8B9QGQAZEB/wHsAYYBhwH/ASgBEgECAf8DAAH/AwAB/wHpAdkBzgH/AewB3QHUAf8BhQErAR4B/wGu
-        AQIBAAH/AaoCAAH/AaMCAAH/ATQCAAH/JAADGAEiAzgBXAJ/AU8B/gJiAUkB9gMAAQGQAAHXATIBMwL/
-        AakBqgH/AfsBnwGgAf8B9QGTAZQB/wEoARIBAgH/ASgBEgECAf8BKAESAQIB/wEoARIBAgH/AS0BGQEJ
-        Af8BNAEhARIB/wG6AQ0BCwH/AbIBBgEDAf8BqgIAAf8BgwIAAf8sAAJcAVgB0QJ/AVQB/gM/AW2QAAHb
-        AYMBhAL/AbMBtAL/Aa0BrgH/AfwBowGkAf8B9AGOAY8B/wHsAYYBhwH/AeYBgAGBAf8B3wEwATEB/wHX
-        ASgBKQH/AdEBIgEjAf8BwQEUARMB/wG6AQ0BCwH/AbIBBwEDAf8BiQIAAf8cAAMHAQkMAAMuAUcBVwIr
-        AfwCfwFmAf4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJARoBFwH/AcQBFQENAf8BvgEPAQIB/wG4
-        AQkBAAH/AbMBBAEAAf8BrQIAAf8BpwIAAf8BoQIAAf8BwQEUARMB/wG6AQ0BCwH/AY8CAAH/DAAB4wEv
-        AQAB/wHWASkBAAH/AccBIAEAAf8BtgEWAQAB/wGtAREBAAH/AZUBAwEAAf8IAAMYASIBfwFpAT0B/gGo
-        AYQBQAH9A0IBdYwAAeIBkQGSAv8BvQG+Af8BzAEdAR4J/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHq
-        AdsB0gH/AeUB0QHGAf8B4QHKAb0B/wGhAgAB/wHCARQBEwH/AZQCAQH/DAAB5QGDAQkB/wHfASoBAAH/
-        AeoBggEAAf8B8wGaASEB/wHiAYwBGAH/AyYBOQgAAwQBBQGoAkAB/QJiAUkB9gNWAbSMAAHlAZcBmAL/
-        Ab0BvgH/AdMBJAElDf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHlAdEBxgH/AacCAAH/
-        AcwCHgH/AZoCBAH/DAAB5gGOARkB/wHsAYIBAgH/AfMBjQESAf8B7AGcAS0B/wFWAlQBqwMqAUEIAAMC
-        AQMCXwEyAfsCYAFZAesDWQHCjAAB6QGeAZ8C/wG9Ab4B/wHcAS0BLhH/AfsB+AH2Af8B9gHuAeoB/wHw
-        AeUB3gH/AeoB2wHSAf8BrQIAAf8B1wEoASkB/wGfAQYBBwH/DAAB5wGZASoB/wHzAZoBIQH/AfQBnAEo
+        CAAAAk1TRnQBSQFMAgEBAgEAAfQBAgH0AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBGgEbAf8BqgELAQwB/wGkAQgBCQH/AZ8BBQEGAf8BmgID
+        Af8BlAIAAf8BjwIAAf8BiQIAAf8BgwIAAf8BLgIAAf8BLgIAAf8BKAIAAf8BJAIAAf/IAAHPASEBIgH/
+        AfMBjgGPAf8B5gGAAYEB/wGqAgAB/wMAAf8BwwG0AasB/wHGAbsBswH/AcoBwQG8Af8BzgHIAcQB/wEM
+        AQMBAAH/AZ4CAAH/AZwCAAH/AZgCAAH/ASgCAAH/JAADNgFZAkcBRgGBAxABFZgAAdEBJQEmAv8BmQGa
+        Af8B7AGGAYcB/wHmAYABgQH/AScBEQEBAf8DAAH/AY0BLgEeAf8B7QHgAdgB/wHxAecB4AH/AY8BNQEp
+        Af8BowIAAf8BogIAAf8BnAIAAf8BLgIAAf8kAAMsAUMDTQH6AmoBRwH5Ay8BSpQAAdQBKwEsAv8BnwGg
+        Af8B9QGQAZEB/wHsAYYBhwH/AScBEQEBAf8DAAH/AwAB/wHpAdkBzgH/AewB3QHUAf8BhQEqAR0B/wGu
+        AQEBAAH/AaoCAAH/AaMCAAH/ATMCAAH/JAADGAEiAzgBXAJ/AU8B/gJiAUkB9gMAAQGQAAHXATEBMgL/
+        AakBqgH/AfsBnwGgAf8B9QGTAZQB/wEnAREBAQH/AScBEQEBAf8BJwERAQEB/wEnAREBAQH/ASwBGAEI
+        Af8BMwEgAREB/wG6AQwBCgH/AbIBBQECAf8BqgIAAf8BgwIAAf8sAAJcAVgB0QJ/AVQB/gM/AW2QAAHb
+        AYMBhAL/AbMBtAL/Aa0BrgH/AfwBowGkAf8B9AGOAY8B/wHsAYYBhwH/AeYBgAGBAf8B3wEvATAB/wHX
+        AScBKAH/AdEBIQEiAf8BwQETARIB/wG6AQwBCgH/AbIBBgECAf8BiQIAAf8cAAMHAQkMAAMuAUcBVgIr
+        AfwCfwFmAf4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJARkBFgH/AcQBFAEMAf8BvgEOAQEB/wG4
+        AQgBAAH/AbMBAwEAAf8BrQIAAf8BpwIAAf8BoQIAAf8BwQETARIB/wG6AQwBCgH/AY8CAAH/DAAB4wEu
+        AQAB/wHWASgBAAH/AccBHwEAAf8BtgEVAQAB/wGtARABAAH/AZUBAgEAAf8IAAMYASIBfwFpAT0B/gGo
+        AYQBQAH9A0IBdYwAAeIBkQGSAv8BvQG+Af8BzAEcAR0J/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHq
+        AdsB0gH/AeUB0QHGAf8B4QHKAb0B/wGhAgAB/wHCARMBEgH/AZQCAAH/DAAB5QGDAQgB/wHfASkBAAH/
+        AeoBggEAAf8B8wGaASAB/wHiAYwBFwH/AyYBOQgAAwQBBQGoAkAB/QJiAUkB9gNWAbSMAAHlAZcBmAL/
+        Ab0BvgH/AdMBIwEkDf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHlAdEBxgH/AacCAAH/
+        AcwCHQH/AZoCAwH/DAAB5gGOARgB/wHsAYIBAQH/AfMBjQERAf8B7AGcASwB/wFWAlQBqwMqAUEIAAMC
+        AQMCXwEyAfsCYAFZAesDWQHCjAAB6QGeAZ8C/wG9Ab4B/wHcASwBLRH/AfsB+AH2Af8B9gHuAeoB/wHw
+        AeUB3gH/AeoB2wHSAf8BrQIAAf8B1wEnASgB/wGfAQUBBgH/DAAB5wGZASkB/wHzAZoBIAH/AfQBnAEn
         Af8DXwHoAagCQAH9AlwBPgH4AkABPwFvBAADGgEkAl8BVwHoAmIBWAHvA1gBvIwAAe0BpgGnAv8BvQG+
-        Af8B5gGAAYEV/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wGzAQQBAAH/Ad8BMAExAf8BpAEJAQoB/wgA
-        AwcBCQHpAaQBgQH/A14B1QNHAYABXQE9ATEB/AJ/AV4B/gHHAScBAAH/A00B+gNZAccCYQFbAeEBOAIr
-        AfwCagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2Af8B9gHuAeoB/wG4AQkBAAH/
-        AR4CAAH/AaoBDAENAf8MAAHqAaoBiwH/AyEBMAQAA1QBpgNfAfsDZAHsAl8BRAH7AUECKwH8AW0BYAFR
-        AfcCZAFTAfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+Af8B+AGSAZMd/wH7AfgB9gH/Ab4BDwECAf8BsAEP
-        ARAB/wGwAQ8BEAH/HAADVwG4AVwBPAEwAfwDZAHnA18B4wNhAdwDXwHjA2cB8gMTARqMAAH1AbYBtwH/
+        Af8B5gGAAYEV/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wGzAQMBAAH/Ad8BLwEwAf8BpAEIAQkB/wgA
+        AwcBCQHpAaQBgQH/A14B1QNHAYABXAE8ATAB/AJ/AV4B/gHHASYBAAH/A00B+gNZAccCYQFbAeEBNwIr
+        AfwCagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2Af8B9gHuAeoB/wG4AQgBAAH/
+        AR0CAAH/AaoBCwEMAf8MAAHqAaoBiwH/AyEBMAQAA1QBpgNfAfsDZAHsAl8BRAH7AT8CKwH8AW0BYAFR
+        AfcCZAFTAfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+Af8B+AGSAZMd/wH7AfgB9gH/Ab4BDgEBAf8BsAEO
+        AQ8B/wGwAQ4BDwH/HAADVwG4AVsBOwEvAfwDZAHnA18B4wNhAdwDXwHjA2cB8gMTARqMAAH1AbYBtwH/
         AfUBtgG3Af8B8wGyAbMB/wHxAa0BrgH/Ae4BpwGoAf8B6gGhAaIB/wHnAZoBmwH/AeQBkwGUAf8B4AGO
-        AY8B/wHdAYcBiAH/AdoBgAGBAf8B1gExATIB/wHTASsBLAH/AdEBJgEnAf8gAAM4AVwDVwG4A2EB4gNb
+        AY8B/wHdAYcBiAH/AdoBgAGBAf8B1gEwATEB/wHTASoBKwH/AdEBJQEmAf8gAAM4AVwDVwG4A2EB4gNb
         AcQDTgGUAxMBGv8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABP8EAAGA
         AQEC/wQAAYABAQH/AR8EAAGAAQEB/wEPBAABgAEBAf8BBwQAAYABAQH/AccEAAGAAQEB/QHDBAABgAEB
         AcABwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABQwQAAYABAQGAAQMEAAGAAQEByAEDBAABgAEB
@@ -4536,6 +4536,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
